# blue-detuned-tweezers

./: .gitignore  LICENSE  README.md  pyproject.toml
data/CaF_lightshifts/: energy_shift_vs_intensity_508nm.csv  energy_shift_vs_intensity_780nm.csv
data/results/: caf_flux.csv  rb_flux.csv
figures/: flux_vs_barrier_height.py  potential_figure.py  temp.py
scripts/: build_barricade_potential.py  build_optical_forces.py  power_contours.py  run_flux_simulations.py
src/BDT/barricade_potential/: compute.py  config.py  interp.py  mp.py  richards_wolf.py
src/BDT/flux_simulations/: constants.py  forces_io.py  grid.py  physics.py  richard_wolf_force.py  runner.py
src/BDT/flux_simulations/__pycache__/: richard_wolf_force.RW_force_trilin_numba-72.py313.1.nbc  richard_wolf_force.RW_force_trilin_numba-72.py313.nbi
src/BDT/optical_forces/: __init__.py  compute_optical_forces.py
src/BDT/power_contours/: build_vol.py  contours.py  load_data.py
