[project]
name = "blue-detuned-tweezersv2"
version = "0.1.0"
description = "Blue-detuned optical tweezer simulations and flux modelling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/BDT"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""